--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -7,6 +7,14 @@ body {
   overflow-y: scroll;
 }
 
+::selection {
+  background: #fff2a8;
+}
+
+::-moz-selection {
+  background: #fff2a8;
+}
+
 h1,
 h2,
 h3 {
