--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,46 @@
+@import '../node_modules/bulma/sass/utilities/initial-variables';
+@import '../node_modules/bulma/sass/utilities/functions';
+
+// Add new variables
+
+@import '../node_modules/bulma/sass/utilities/derived-variables';
+
+// Add colors here!
+
+@import '../node_modules/bulma/bulma';
+
 @import './_fontawesome';
 @import './_highlight';
 @import './schnack';
 
-@import './_global';
+// Global
+
+body {
+  overflow-y: scroll;
+}
+
+::selection {
+  background: #fff2a8;
+}
+
+::-moz-selection {
+  background: #fff2a8;
+}
+
+// Content
+
+#content {
+  img:not(.emoji) {
+    width: 100%;
+  }
+
+  .emoji {
+    height: 1.3rem;
+  }
+}
+
+// Helpers
+
+.clear {
+  clear: both;
+}
