change $primary to #d34 <3

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,6 +3,8 @@
 
 // Add new variables
 
+$primary: #dd3344;
+
 @import '../node_modules/bulma/sass/utilities/derived-variables';
 
 // Add colors here!
