--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,12 +3,17 @@
 
 // Add new variables
 
-$primary: #dd3344;
-$link: $primary;
+$pinkyRed: #dd3344;
+
+$primary: $pinkyRed;
 
 @import '../node_modules/bulma/sass/utilities/derived-variables';
 
-// Add colors here!
+// Set your colors here!
+
+$link: $pinkyRed;
+
+$footer-background-color: $dark;
 
 @import '../node_modules/bulma/bulma';
 
